# parallel-prog-final

./: .gitignore  CMakeLists.txt  README.md  cmake_cmd.txt  compare_bins.cpp  cpu_train.cpp  main.cpp  tmp.txt
cpu/: cpu_train.cpp  helper.cpp
cpu/nn/: activation.cpp  autoencoder.cpp  autoencoder.h  conv.cpp  conv.h  maxpool.cpp  upsample.cpp  utils.cpp
src/: dataset.cpp  dataset.h  features_extractor.cpp  features_extractor.h  models.h
src/examples/iris/: iris_example.cpp
src/nn/: a.ipynb  autoencoder.cpp  autoencoder.h  conv.cpp  conv.h  gpu_autoencoder.cu  gpu_autoencoder.h  gpu_train.cu  notes.ipynb  utils.cpp  utils.h
test/: test.cpp  testconv2d.cpp  testdata.cpp  testmaxpooling.cpp  testupsample.cpp
